# ai-matrix-quick-scraper

./: .env.example  .gitignore  README.md  main.py  parse_sample.py  pyproject.toml  quick_scraper.py  requirements.txt
common/utils/: my_utils.py
temp/: Breast_Implants_Silicone_Vs_Saline_Cost_Problems_Recovery_240329_0736.txt  _Types_of_Breast_Implants_American_Society_of_Plastic_Surgeo_240329_0728.txt  _Types_of_Breast_Implants_American_Society_of_Plastic_Surgeo_240329_0754.txt  page_data_1aa9a659-59dc-4cd3-82f4-ceb5c33c29ea.json  page_data_1ec8237c-7030-44cf-b9ba-1d2a58f632c5.json  page_data_4e6d8b0c-7def-40c8-8604-b7f9430472cb.json  page_data_76ea3427-c96a-450d-8ed1-4be9731c6f33.json  page_data_8ee0b47f-4fc4-4026-906e-3c0982a371dc.json  page_data_ad1a5182-7d5f-4f14-aee2-211327615a92.json  page_data_d2993d54-84cd-4d58-b29a-d80ae37f325a.json
temp/local_sources/: Eye_Fillers_Types_Procedure_Cost_Complications_240328_0822.txt  FDA_Approved_Dermal_Fillers_FDA_240328_1900.txt
temp/scrapes/: site_filters.json
temp/scrapes/organized/: organized_healthline_com_health_crohns_disease.json  organized_pypi_org_project_markdown_it_py_.json
temp/scrapes/soup/: _list.txt  soup_healthline_com_health_crohns_disease_240417_1354.txt  soup_healthline_com_health_crohns_disease_240417_1358.txt  soup_pypi_org_project_markdown_it_py__240418_0243.txt
temp/scrapes/structured/: structured_healthline_com_health_crohns_disease.json  structured_pypi_org_project_markdown_it_py_.json
temp/scrapes/text/: structured_healthline_com_health_crohns_disease.txt  structured_pypi_org_project_markdown_it_py_.txt
webscraper/quick_scrapes/: quick_scraper.py
