[tool.poetry]
name = "aidream"
version = "0.1.0"
description = ""
authors = ["armanisadeghi <132974515+armanisadeghi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
numpy = "^1.22"
opencv-python = "^4.8.1.78"
django = "^5.0"
openai = "^1.6.0"
beautifulsoup4 = "^4.12.2"
djangorestframework = "^3.14.0"
asgiref = "^3.7.2"
html5lib = "^1.1"
setuptools = "^69.0.2"
sqlparse = "^0.4.4"
requests = "^2.31.0"
qrcode = "^7.4.2"
reportlab = "^4.0.8"
pillow = "^10.2.0"
pandas = "^2.1.4"
python-dateutil = "^2.8.2"
pypdf2 = "^3.0.1"
astor = "^0.8.1"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
django-nested-admin = "^4.0.2"
tabulate = "^0.9.0"
aiohttp = "^3.9.1"
lxml = "^4.9.4"
scrapy = "^2.11.0"
itemadapter = "^0.8.0"
w3lib = "^2.1.2"
httpx = "^0.26.0"
colorama = "^0.4.6"
pydub = "^0.25.1"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
tldextract = "^5.1.1"
pycountry = "^23.12.11"
channels = "^4.0.0"
selenium = "^4.16.0"
dj-database-url = "^2.1.0"
django-countries = "^7.5.1"
django-allauth = "^0.59.0"
dj-rest-auth = "^5.0.2"
django-phonenumber-field = "^7.2.0"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"
django-extensions = "^3.2.3"
django-filter = "^23.5"
django-widget-tweaks = "^1.5.0"
django-json-widget = "^1.1.1"
phonenumbers = "^8.13.27"
python-baseconv = "^1.2.2"
django-encryption = "^0.3.18"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
uvicorn = "^0.25.0"
asyncio = "^3.4.3"
python-socketio = "^5.10.0"
whitenoise = "^6.6.0"
multidict = "^6.0.4"
google-cloud-secret-manager = "^2.17.0"
google-api-python-client = "^2.111.0"
google-cloud-tasks = "^2.15.0"
google-cloud-speech = "^2.23.0"
django-sslserver = "^0.22"
google-generativeai = "^0.3.2"
google-cloud-aiplatform = "^1.38.1"
google-cloud-texttospeech = "^2.15.0"
tiktoken = "^0.5.2"
jsonschema = "^4.20.0"
django-import-export = "^3.3.5"
google-auth = "^2.26.1"
google-auth-oauthlib = "^1.2.0"
gspread = "^5.12.4"
django-sslserver-v2 = "^1.0"
django-tinymce = "^3.6.1"
firebase-admin = "^6.4.0"
celery = "^5.1"
redis = "^5.0.1"
flower = "^2.0.1"
pyarrow = "^15.0.0"
googleads = "^40.0.0"
django-redis = "^5.4.0"
google-cloud-bigquery = "^3.17.2"
virtualenv = "^20.25.0"
google-cloud-pubsub = "^2.19.4"
pydantic = "^2.0"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.5"
google-cloud = "^0.34.0"
oauth2 = "^1.9.0.post1"
wheel = "^0.42.0"
pymupdf = "^1.23.21"
tabula-py = "^2.9.0"
aiomultiprocess = "^0.9.0"
aiofiles = "^23.2.1"
jpype1 = "^1.5.0"
markdown-it-py = {extras = ["linkify", "plugins"], version = "^3.0.0"}
forestadmin-agent-django = "^1.5.2"
pyaudio = "^0.2.14"
google-auth-httplib2 = "^0.2.0"
jsonpath-ng = "^1.6.1"
cryptography = "^42.0.5"
aioconsole = "^0.7.0"
anthropic = "^0.20.0"
json-repair = "^0.10.1"
networkx = "^3.2.1"
yt-dlp = "^2024.3.10"
speechrecognition = "^3.10.1"
mutagen = "^1.47.0"
speechmatics-python = "^1.14.5"
pocketsphinx = "^5.0.3"
readability-lxml = "^0.8.1"
pyht = "^0.0.27"
simpleaudio = "^1.0.4"
sounddevice = "^0.4.6"
python-docx = "^1.1.0"
django-simple-history = "^3.5.0"
prettytable = "^3.10.0"
google-cloud-logging = "^3.10.0"
google-cloud-error-reporting = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

