[tool.poetry]
name = "ai-matrix-quick-scraper"
version = "0.1.0"
description = ""
authors = ["armanisadeghi <132974515+armanisadeghi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
opencv-python = "^4.8.1.78"
beautifulsoup4 = "^4.12.2"
numpy = "^1.23.4"
pandas = "^1.4"
requests = "^2.28"
requests-file = "*"
aiohttp = "*"
aiosignal = "*"
asgiref = "*"
attrs = "*"
certifi = "*"
charset-normalizer = "*"
filelock = "*"
frozenlist = "*"
idna = "*"
multidict = "*"
python-dateutil = "*"
pytz = "*"
six = "*"
soupsieve = "*"
sqlparse = "*"
tabulate = "*"
tldextract = "*"
tzdata = "*"
urllib3 = "*"
yarl = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quick_scraper = "webscraper.quick_scrapes.quick_scraper:main"
parse_sample = "webscraper.quick_scrapes.parse_sample:main"

[tool.poetry.packages]
packages = [
    { include = "webscraper", from = "webscraper" },
    { include = "common", from = "common" }
]
