[tool.poetry]
name = "ai matrix quick scraper"
version = "1.2"
description = "This is a quick scraper for AI Matrix Engine's AI Agents to use in real time"
authors = ["armanisadeghi <132974515+armanisadeghi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.31.0"
aiohttp = "^3.9.5"
urllib3 = "^2.2.1"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
tldextract = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
